--- a/source/index.html
+++ b/source/index.html
@@ -5,8 +5,158 @@
     <title>HTML Academy: Мишка</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">Профессиональный HTML и CSS</a>», уровень 2.</p>
-
+    <header class="main-header">
+      <a class="main-header__logo">
+        <img class="main-header__logo-image" src="#" width="86" height="35" alt="Магазин &laquo;Мишка&raquo;">
+      </a>
+      <nav class="main-nav">
+        <button class="main-nav__toggle" type="button">Открыть меню</button>
+        <div class="main-nav__wrapper">
+          <ul class="main-nav__list header-list">
+            <li class="header-list__item">
+              <a href="catalog.html">Каталог товаров</a>
+            </li>
+            <li class="header-list__item">
+              <a href="form.html">Вязание на заказ</a>
+            </li>
+            <li class="header-list__item">
+              <a href="">Поиск по сайту</a>
+            </li>
+            <li class="header-list__item">
+              <a href="">Корзина: пока пуста</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <main  class="page-main">
+      <h1 class="visually-hidden">Основное содержание главной страницы</h1>
+      <section class="shop-description">
+        <h2 class="shop-description__title">Милые штуки ручной работы для дома</h2>
+        <ul class="shop-description__services services-list">
+          <li class="services-list__item">Предметы интерьера</li>
+          <li class="services-list__item">Детские игрушки</li>
+        </ul>
+      </section>
+      <section class="weekly-goods">
+          <h2 class="weekly-goods__header">Товар недели</h2>
+          <h3 class="weekly-goods__header--good">Вязаные корзинки</h3>
+          <p class="weekly-goods__description">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках, и трех размерах.</p>
+          <table class="weekly-goods__specifications">
+            <tr>
+              <td class="weekly-goods__field">
+                Цвет:
+              </td>
+              <td class="weekly-goods__value">
+                «Тиффани»/серый
+              </td>
+            </tr>
+            <tr>
+              <td class="weekly-goods__field">
+                Диаметр:
+              </td>
+              <td class="weekly-goods__value">
+                25 см
+              </td>
+            </tr>
+            <tr>
+              <td class="weekly-goods__field">
+                Высота:
+              </td>
+              <td class="weekly-goods__value">
+                15 см
+              </td>
+            </tr>
+          </table>
+          <img class="weekly-goods__image" src="#" width="260" height="315" alt="Товар недели: корзинка">
+          <p class="weekly-goods__price">Цена: 990 руб.</p>
+          <a class="weekly-goods_btn btn" href="">Заказать</a>
+      </section>
+      <section class="advantages">
+        <h2 class="advantages__title">Коротко о нас:</h2>
+        <ul class="advantages__list advantages-about">
+          <li class="advantages-about__item">Экологически чистые материалы</li>
+          <li class="advantages-about__item">Скандинавский стиль по российской цене</li>
+          <li class="advantages-about__item">Увеличивает лайки на фотографиях</li>
+          <li class="advantages-about__item">Связано вручную с любовью и умилением</li>
+          <li class="advantages-about__item">Поддержка отечественного производителя</li>
+          <li class="advantages-about__item">Поставляется в подарочной упаковке</li>
+        </ul>
+      </section>
+      <section class="reviews">
+        <div class="reviews__wrapper slider">
+          <h2 class="reviews__title">Отзывы</h2>
+          <div class="rewiews__list slider__list">
+            <blockquote class="reviews__item slider__item">
+              <cite class="reviews__author">Анастасия Красильникова <span class="reviews__author--email">@misssssiskras</span></cite>
+              <p class="rewiews__text">
+                Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков,
+                как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке,
+                и мои фотографии сразу стали более стильными, а также набирают больше лайков!
+              </p>
+            </blockquote>
+          </div>
+          <p class="reviews__toggles slider__toggles">
+              <button class="slider__toggle" type="button"><span class="visually-hidden">Предыдущий отзыв</span></button>
+              <button class="slider__toggle" type="button"><span class="visually-hidden">Слудующий отзыв</span></button>
+          </p>
+        </div>
+        <a class="reviews__btn btn" href="#">Написать</a>
+      </section>
+      <section class="contacts">
+        <h2 class="contacts__title">Контакты</h2>
+        <table class="contacts__specifications">
+          <tr>
+            <td class="contacts__field">
+              e-mail:
+            </td>
+            <td class="contacts__value">
+              info@mimimishkashop.ru
+            </td>
+          </tr>
+          <tr>
+            <td class="contacts__field">
+              адрес:
+            </td>
+            <td class="contacts__value">
+              г. Санкт-Петербург,
+              ул. Большая Конюшенная,
+              д. 19/8, офис 101
+            </td>
+          </tr>
+        </table>
+        <div class="contacts__map-container">
+          <div class="contacts__map-api" id="map">
+              <img class="visually-hidden" src="#" width="322" height="457" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
+          </div>
+        </div>
+        <a class="contacts__btn btn" href="">Напишите нам</a>
+      </section>
+    </main>
+    <footer class="main-footer">
+      <ul class="main-footer__social social-list">
+        <li class="social-list__item"><a class="visually-hidden" href="">Instagram</a></li>
+        <li class="social-list__item"><a class="visually-hidden" href="">Facebook</a></li>
+        <li class="social-list__item"><a class="visually-hidden" href="">Twitter</a></li>
+      </ul>
+      <div class="main-footer__copyright copyright">
+        <p class="copyrgiht__creator">Разработано</p>
+        <a class="copyright__logo" href="">
+          <img class="copyright__logo-image" src="#" width="27" height="34" alt="Html-academy">
+        </a>
+      </div>
+    </footer>
+    <div class="overlay">
+      <section class="modal-add-item">
+        <h2 class="modal-add-item__title">Добавить в корзину</h2>
+        <p class="modal-add-item__size-title">Выберите размер:</p>
+        <ul class="modal-add-item__select select-list">
+          <li class="select-list__item active">S</li>
+          <li class="select-list__item">M</li>
+          <li class="select-list__item">L</li>
+        </ul>
+        <button class="modal-add-item__btn btn">Добавить</button>
+      </section>
+    </div>
   </body>
 </html>
