--- a/source/form.html
+++ b/source/form.html
@@ -32,89 +32,91 @@
       </nav>
     </header>
     <main class="page-main">
-      <header class="page-header">Вязание на заказ</header>
-    <form class="formn-sorting" method="post" id="delivery-form" action="https://echo.htmlacademy.ru">
-      <p class="formn-sorting__description">
-        Мы будем рады воплотить в жизнь ваши пожелания!
-        Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.
-      </p>
-      <fieldset class="formn-sorting__fieldset order-fieldset">
-        <legend class="order-fieldset__legend">Тип</legend>
-        <ul class="order-fieldset__list">
-          <li class="order-fieldset__item">
-            <input class="visually-hidden filter-input-radio" type="radio" name="radioSort" value="accessory-sort" id="accessory" checked>
-            <label class="field-label" for="accessory">Аксессуар для интерьера</label>
-          </li>
-          <li class="order-fieldset__item">
-            <input class="visually-hidden filter-input-radio" type="radio" name="radioSort" value="children-toy-sort" id="children-toy">
-            <label class="field-label" for="children-toy">Детская игрушка</label>
-          </li>
-        </ul>
-      </fieldset>
-      <fieldset class="formn-sorting__fieldset order-fieldset">
-        <legend class="order-fieldset__legend">Цвет</legend>
-        <ul class="order-fieldset__list">
-          <li class="order-fieldset__item">
-            <input class="visually-hidden filter-input-checkbox" type="checkbox" name="white-color" id="filter-white" checked>
-            <label class="field-label" for="filter-white">Белый</label>
-          </li>
-          <li class="order-fieldset__item">
-            <input class="visually-hidden filter-input-checkbox" type="checkbox" name="grey-color" id="filter-grey" checked>
-            <label class="field-label" for="filter-grey">Серий</label>
-          </li>
-          <li class="order-fieldset__item">
-            <input class="visually-hidden filter-input-checkbox" type="checkbox" name="tiffani-color" id="filter-tiffani">
-            <label class="field-label" for="filter-tiffani">«Тиффани»</label>
-          </li>
-          <li class="order-fieldset__item">
-            <input class="visually-hidden filter-input-checkbox" type="checkbox" name="black-color" id="filter-black">
-            <label class="field-label" for="filter-black">Черный</label>
-          </li>
-          <li class="order-fieldset__item">
-            <input class="visually-hidden filter-input-checkbox" type="checkbox" name="pink-color" id="filter-pink">
-            <label class="field-label" for="filter-pink">Розовый</label>
-          </li>
-          <li class="order-fieldset__item">
-            <input class="visually-hidden filter-input-checkbox" type="checkbox" name="orange-color" id="filter-orange">
-            <label class="field-label" for="filter-orange">Оранжевый</label>
-          </li>
-        </ul>
-      </fieldset>
-      <fieldset class="formn-sorting__fieldset order-fieldset">
-        <legend class="order-fieldset__legend">ФИО</legend>
-        <ul class="order-fieldset__list">
-          <li class="order-fieldset__item">
-            <label class="field-label" for="customer-name">Имя:</label>
-            <input type="text" name="name" id="customer-name" placeholder="Введите ваше имя*">
-          </li>
-          <li class="order-fieldset__item">
-            <label class="field-label" for="customer-surname">Фамилия:</label>
-            <input type="text" name="surname" id="customer-surname" placeholder="Введите вашу фамилию*">
-          </li>
-          <li class="order-fieldset__item">
-            <label class="field-label" for="customer-secondary-name">Фамилия:</label>
-            <input type="text" name="secondary-name" id="customer-secondary-name" placeholder="Отчество, если желаете">
-          </li>
-        </ul>
-      </fieldset>
-      <fieldset class="formn-sorting__fieldset order-fieldset">
-      <legend class="order-fieldset__legend">ТЕЛ</legend>
-            <label class="field-label visually-hidden" for="customer-phone">Телефон</label>
-            <input type="phone" name="phone-number" id="customer-phone" placeholder="+7 ХХХ ХХХ ХХ ХХ*">
-      </fieldset>
-      <fieldset>
-      <legend class="order-fieldset__legend">E-MAIL</legend>
-            <label class="field-label visually-hidden" for="customer-email">Электронная почта</label>
-            <input type="email" name="email" id="customer-email" placeholder="Ваш Email*">
-      </fieldset>
-      <fieldset>
-      <legend class="order-fieldset__legend">Доп</legend>
-            <label class="field-label visually-hidden" for="customer-comment">Комментарий к заказу</label>
-            <textarea name="comment" id="customer-comment" placeholder="Опишите все ваши пожелания к заказу"></textarea>
-      </fieldset>
-      <p class="form-sorting__important-inputs">*Поля обязательны для заполнения</p>
-      <button class="form-sorting__btn btn" form="delivery-form" type="submit">Отправить заказ</button>
-    </form>
+      <header class="page-header">
+      <h1 class="page-header__title">Вязание на заказ</h1>
+      </header>
+      <form class="formn-sorting" method="post" id="delivery-form" action="https://echo.htmlacademy.ru">
+        <p class="formn-sorting__description">
+          Мы будем рады воплотить в жизнь ваши пожелания!
+          Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.
+        </p>
+        <fieldset class="formn-sorting__fieldset order-fieldset">
+          <legend class="order-fieldset__legend">Тип</legend>
+          <ul class="order-fieldset__list">
+            <li class="order-fieldset__item">
+              <input class="visually-hidden filter-input-radio" type="radio" name="radioSort" value="accessory-sort" id="accessory" checked>
+              <label class="field-label" for="accessory">Аксессуар для интерьера</label>
+            </li>
+            <li class="order-fieldset__item">
+              <input class="visually-hidden filter-input-radio" type="radio" name="radioSort" value="children-toy-sort" id="children-toy">
+              <label class="field-label" for="children-toy">Детская игрушка</label>
+            </li>
+          </ul>
+        </fieldset>
+        <fieldset class="formn-sorting__fieldset order-fieldset">
+          <legend class="order-fieldset__legend">Цвет</legend>
+          <ul class="order-fieldset__list">
+            <li class="order-fieldset__item">
+              <input class="visually-hidden filter-input-checkbox" type="checkbox" name="white-color" id="filter-white" checked>
+              <label class="field-label" for="filter-white">Белый</label>
+            </li>
+            <li class="order-fieldset__item">
+              <input class="visually-hidden filter-input-checkbox" type="checkbox" name="grey-color" id="filter-grey" checked>
+              <label class="field-label" for="filter-grey">Серий</label>
+            </li>
+            <li class="order-fieldset__item">
+              <input class="visually-hidden filter-input-checkbox" type="checkbox" name="tiffani-color" id="filter-tiffani">
+              <label class="field-label" for="filter-tiffani">«Тиффани»</label>
+            </li>
+            <li class="order-fieldset__item">
+              <input class="visually-hidden filter-input-checkbox" type="checkbox" name="black-color" id="filter-black">
+              <label class="field-label" for="filter-black">Черный</label>
+            </li>
+            <li class="order-fieldset__item">
+              <input class="visually-hidden filter-input-checkbox" type="checkbox" name="pink-color" id="filter-pink">
+              <label class="field-label" for="filter-pink">Розовый</label>
+            </li>
+            <li class="order-fieldset__item">
+              <input class="visually-hidden filter-input-checkbox" type="checkbox" name="orange-color" id="filter-orange">
+              <label class="field-label" for="filter-orange">Оранжевый</label>
+            </li>
+          </ul>
+        </fieldset>
+        <fieldset class="formn-sorting__fieldset order-fieldset">
+          <legend class="order-fieldset__legend">ФИО</legend>
+          <ul class="order-fieldset__list">
+            <li class="order-fieldset__item">
+              <label class="field-label" for="customer-name">Имя:</label>
+              <input type="text" name="name" id="customer-name" placeholder="Введите ваше имя*">
+            </li>
+            <li class="order-fieldset__item">
+              <label class="field-label" for="customer-surname">Фамилия:</label>
+              <input type="text" name="surname" id="customer-surname" placeholder="Введите вашу фамилию*">
+            </li>
+            <li class="order-fieldset__item">
+              <label class="field-label" for="customer-secondary-name">Фамилия:</label>
+              <input type="text" name="secondary-name" id="customer-secondary-name" placeholder="Отчество, если желаете">
+            </li>
+          </ul>
+        </fieldset>
+        <fieldset class="formn-sorting__fieldset order-fieldset">
+        <legend class="order-fieldset__legend">ТЕЛ</legend>
+              <label class="field-label visually-hidden" for="customer-phone">Телефон</label>
+              <input type="tel" name="phone-number" id="customer-phone" placeholder="+7 ХХХ ХХХ ХХ ХХ*">
+        </fieldset>
+        <fieldset>
+        <legend class="order-fieldset__legend">E-MAIL</legend>
+              <label class="field-label visually-hidden" for="customer-email">Электронная почта</label>
+              <input type="email" name="email" id="customer-email" placeholder="Ваш Email*">
+        </fieldset>
+        <fieldset>
+        <legend class="order-fieldset__legend">Доп</legend>
+              <label class="field-label visually-hidden" for="customer-comment">Комментарий к заказу</label>
+              <textarea name="comment" id="customer-comment" placeholder="Опишите все ваши пожелания к заказу"></textarea>
+        </fieldset>
+        <p class="form-sorting__important-inputs">*Поля обязательны для заполнения</p>
+        <button class="form-sorting__btn btn" form="delivery-form" type="submit">Отправить заказ</button>
+      </form>
     </main>
     <footer class="main-footer">
       <ul class="main-footer__social social-list">
