--- a/source/form.html
+++ b/source/form.html
@@ -6,25 +6,25 @@
   </head>
   <body>
     <header class="main-header">
-      <a href="index.html" class="main-header__logo">
+      <a src="index.html" class="main-header__logo">
         <img class="main-header__logo-image" src="#" width="86" height="35" alt="Магазин &laquo;Мишка&raquo;">
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button">Открыть меню</button>
         <div class="main-nav__wrapper">
-          <ul class="main-nav__list header-list">
-            <li class="header-list__item">
+          <ul class="main-nav__list site-nav">
+            <li class="site-nav__item">
               <a href="catalog.html">Каталог товаров</a>
             </li>
-            <li class="header-list__item">
+            <li class="site-nav__item">
               <a href="form.html">Вязание на заказ</a>
             </li>
           </ul>
-          <ul class="user-nav header-list">
-            <li class="header-list__item user-nav__item">
+          <ul class="main-nav__list user-nav">
+            <li class="user-nav__item">
               <a href="">Поиск по сайту</a>
             </li>
-            <li class="header-list__item user-nav__item">
+            <li class="user-nav__item">
               <a href="">Корзина: пока пуста</a>
             </li>
           </ul>
@@ -120,9 +120,9 @@
     </main>
     <footer class="main-footer">
       <ul class="main-footer__social social-list">
-        <li class="social-list__item"><a class="visually-hidden" href="">Instagram</a></li>
-        <li class="social-list__item"><a class="visually-hidden" href="">Facebook</a></li>
-        <li class="social-list__item"><a class="visually-hidden" href="">Twitter</a></li>
+        <li class="social-list__item social-list__item--insta"><a class="visually-hidden" href="">Instagram</a></li>
+        <li class="social-list__item social-list__item--fb"><a class="visually-hidden" href="">Facebook</a></li>
+        <li class="social-list__item social-list__item--Twit"><a class="visually-hidden" href="">Twitter</a></li>
       </ul>
       <div class="main-footer__copyright copyright">
         <p class="copyrgiht__creator">Разработано</p>
