--- a/source/index.html
+++ b/source/index.html
@@ -91,7 +91,7 @@
           <h2 class="reviews__title">Отзывы</h2>
           <div class="rewiews__list slider__list">
             <blockquote class="reviews__item slider__item">
-              <cite class="reviews__author">Анастасия Красильникова <span class="reviews__author reviews__author--nickname">@misssssiskras</span></cite>
+              <cite class="reviews__author">Анастасия Красильникова <span>@misssssiskras</span></cite>
               <p class="rewiews__text">
                 Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков,
                 как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке,
@@ -138,9 +138,9 @@
     </main>
     <footer class="main-footer">
       <ul class="main-footer__social social-list">
-        <li class="social-list__item"><a class="visually-hidden" href="">Instagram</a></li>
-        <li class="social-list__item"><a class="visually-hidden" href="">Facebook</a></li>
-        <li class="social-list__item"><a class="visually-hidden" href="">Twitter</a></li>
+        <li class="social-list__item social-list__item--insta"><a class="visually-hidden" href="">Instagram</a></li>
+        <li class="social-list__item social-list__item--fb"><a class="visually-hidden" href="">Facebook</a></li>
+        <li class="social-list__item social-list__item--Twit"><a class="visually-hidden" href="">Twitter</a></li>
       </ul>
       <div class="main-footer__copyright copyright">
         <p class="copyrgiht__creator">Разработано</p>
