--- a/source/catalog.html
+++ b/source/catalog.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header class="main-header">
-      <a src="index.html" class="main-header__logo">
+      <a href="index.html" class="main-header__logo">
         <img class="main-header__logo-image" src="#" width="86" height="35" alt="Магазин &laquo;Мишка&raquo;">
       </a>
       <nav class="main-nav">
@@ -14,7 +14,7 @@
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-nav">
             <li class="site-nav__item">
-              <a href="catalog.html">Каталог товаров</a>
+              <a href="#">Каталог товаров</a>
             </li>
             <li class="site-nav__item">
               <a href="form.html">Вязание на заказ</a>
@@ -80,7 +80,7 @@
               <source src="#" type="video/ogg">
               <source src="#" type="video/webm">
             </video>
-          <button class="production__btn--start">Запустить видео</button>
+          <button class="catalog-video__btn">Запустить видео</button>
         </div>
         <p class="production__description">
           По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том,
@@ -93,7 +93,7 @@
       <ul class="main-footer__social social-list">
         <li class="social-list__item social-list__item--insta"><a class="visually-hidden" href="">Instagram</a></li>
         <li class="social-list__item social-list__item--fb"><a class="visually-hidden" href="">Facebook</a></li>
-        <li class="social-list__item social-list__item--Twit"><a class="visually-hidden" href="">Twitter</a></li>
+        <li class="social-list__item social-list__item--twit"><a class="visually-hidden" href="">Twitter</a></li>
       </ul>
       <div class="main-footer__copyright copyright">
         <p class="copyrgiht__creator">Разработано</p>
