--- a/source/form.html
+++ b/source/form.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header class="main-header">
-      <a src="index.html" class="main-header__logo">
+      <a href="index.html" class="main-header__logo">
         <img class="main-header__logo-image" src="#" width="86" height="35" alt="Магазин &laquo;Мишка&raquo;">
       </a>
       <nav class="main-nav">
@@ -17,7 +17,7 @@
               <a href="catalog.html">Каталог товаров</a>
             </li>
             <li class="site-nav__item">
-              <a href="form.html">Вязание на заказ</a>
+              <a href="#">Вязание на заказ</a>
             </li>
           </ul>
           <ul class="main-nav__list user-nav">
@@ -122,7 +122,7 @@
       <ul class="main-footer__social social-list">
         <li class="social-list__item social-list__item--insta"><a class="visually-hidden" href="">Instagram</a></li>
         <li class="social-list__item social-list__item--fb"><a class="visually-hidden" href="">Facebook</a></li>
-        <li class="social-list__item social-list__item--Twit"><a class="visually-hidden" href="">Twitter</a></li>
+        <li class="social-list__item social-list__item--twit"><a class="visually-hidden" href="">Twitter</a></li>
       </ul>
       <div class="main-footer__copyright copyright">
         <p class="copyrgiht__creator">Разработано</p>
