--- a/source/index.html
+++ b/source/index.html
@@ -36,7 +36,7 @@
       <section class="directions">
         <h2 class="visually-hidden">Наши основные направления</h2>
         <b class="directions__info">Милые штуки ручной работы для дома</b>
-        <ul class="directions__services directions__list">
+        <ul class="directions__list">
           <li class="directions__item">Предметы интерьера</li>
           <li class="directions__item">Детские игрушки</li>
         </ul>
@@ -140,7 +140,7 @@
       <ul class="main-footer__social social-list">
         <li class="social-list__item social-list__item--insta"><a class="visually-hidden" href="">Instagram</a></li>
         <li class="social-list__item social-list__item--fb"><a class="visually-hidden" href="">Facebook</a></li>
-        <li class="social-list__item social-list__item--Twit"><a class="visually-hidden" href="">Twitter</a></li>
+        <li class="social-list__item social-list__item--twit"><a class="visually-hidden" href="">Twitter</a></li>
       </ul>
       <div class="main-footer__copyright copyright">
         <p class="copyrgiht__creator">Разработано</p>
@@ -154,8 +154,8 @@
         <form class="modal-add-item__form" id="size-form" method="get" action="https://echo.htmlacademy.ru">
         <h2 class="modal-add-item__title">Добавить в корзину</h2>
         <p class="modal-add-item__size-title">Выберите размер:</p>
-        <ul class="modal-add-item__select">
-          <li class="modal-add-item__item size-list">
+        <ul class="modal-add-item__select size-list">
+          <li class="modal-add-item__item">
             <input class="size-list__radio" type="radio" name="size-radio" value="size-S" id="s-size-add" checked>
             <label class="size-list__label" for="s-size-add">S</label>
           </li>
