--- a/source/catalog.html
+++ b/source/catalog.html
@@ -14,7 +14,7 @@
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-nav">
             <li class="site-nav__item">
-              <a href="">Каталог товаров</a>
+              <a>Каталог товаров</a>
             </li>
             <li class="site-nav__item">
               <a href="form.html">Вязание на заказ</a>
