--- a/source/form.html
+++ b/source/form.html
@@ -17,7 +17,7 @@
               <a href="catalog.html">Каталог товаров</a>
             </li>
             <li class="site-nav__item">
-              <a href="">Вязание на заказ</a>
+              <a>Вязание на заказ</a>
             </li>
           </ul>
           <ul class="main-nav__list user-nav">
