Сделал все страницы

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Мишка</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header class="main-header">
       <a href="index.html" class="main-header__logo">
-        <img class="main-header__logo-image" src="#" width="86" height="35" alt="Магазин &laquo;Мишка&raquo;">
+        <img class="main-header__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Магазин &laquo;Мишка&raquo;">
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button">Открыть меню</button>
@@ -39,7 +40,7 @@
         <ul class="catalog-items__list catalog-assortment">
           <li class="catalog-assortment__item good">
             <h2 class="good__title">Зайчик-попрыгайчик</h2>
-            <a class="good__image" href=""><img src="#" width="260" height="195" alt="Изображение товара:кролик"></a>
+            <a class="good__image" href=""><img src="img/photo-hare-mobile@1x.jpg" width="260" height="195" alt="Изображение товара:кролик"></a>
             <p class="good__description">Рост 30 см, вес 200 г</p>
             <p class="good__bottom">
               <span class="good__price">1 200 руб.</span>
@@ -50,7 +51,7 @@
           </li>
           <li class="catalog-assortment__item good">
             <h2 class="good__title">Корзинка для белья</h2>
-            <a class="good__image" href=""><img src="#" width="260" height="195" alt="Изображение товара:корзина"></a>
+            <a class="good__image" href=""><img src="img/photo-bowl-mobile@1x.jpg" width="260" height="195" alt="Изображение товара:корзина"></a>
             <p class="good__description">Диаметр 15 см, высота 10 см</p>
             <p class="good__bottom">
               <span class="good__price">690 руб.</span>
@@ -61,7 +62,7 @@
           </li>
           <li class="catalog-assortment__item good">
             <h2 class="good__title">Большая корзинка для игрушек</h2>
-            <a class="good__image" href=""><img src="#" width="260" height="195" alt="Изображение товара:корзина для игрушек"></a>
+            <a class="good__image" href=""><img src="img/photo-toys-mobile@1x.jpg" width="260" height="195" alt="Изображение товара:корзина для игрушек"></a>
             <p class="good__description">Диаметр 30 см, высота 30 см</p>
             <p class="good__bottom">
               <span class="good__price">1 500 руб.</span>
@@ -76,9 +77,9 @@
         <h2 class="production__title">Процесс производствка</h2>
         <div class="production__container">
             <video class="production__media catalog-video" poster="#" width="260" height="150">
-              <source src="#" type="video/mp4">
-              <source src="#" type="video/ogg">
-              <source src="#" type="video/webm">
+              <source src="#" type="video/mishka-video.mp4">
+              <source src="#" type="video/mishka-video.ogg">
+              <source src="#" type="video/mishka-video.webm">
             </video>
           <button class="catalog-video__btn">Запустить видео</button>
         </div>
@@ -98,7 +99,7 @@
       <div class="main-footer__copyright copyright">
         <p class="copyrgiht__creator">Разработано</p>
         <a class="copyright__logo" href="">
-          <img class="copyright__logo-image" src="#" width="27" height="34" alt="Html-academy">
+          <img class="copyright__logo-image" src="img/htmlacademy.svg" width="27" height="34" alt="Html-academy">
         </a>
       </div>
     </footer>
