Вроде все стили

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -76,7 +76,7 @@
       <section class="production">
         <h2 class="production__title">Процесс производствка</h2>
         <div class="production__container">
-            <video class="production__media catalog-video" poster="#" width="260" height="150">
+            <video class="production__media catalog-video" poster="img/video-mobile@1x.jpg" width="260" height="150">
               <source src="#" type="video/mishka-video.mp4">
               <source src="#" type="video/mishka-video.ogg">
               <source src="#" type="video/mishka-video.webm">
