--- a/source/form.html
+++ b/source/form.html
@@ -95,7 +95,7 @@
               <input type="text" name="surname" id="customer-surname" placeholder="Введите вашу фамилию*">
             </li>
             <li class="order-fieldset__item">
-              <label class="field-label" for="customer-secondary-name">Фамилия:</label>
+              <label class="field-label" for="customer-secondary-name">Отчество:</label>
               <input type="text" name="secondary-name" id="customer-secondary-name" placeholder="Отчество, если желаете">
             </li>
           </ul>
