--- a/source/index.html
+++ b/source/index.html
@@ -38,8 +38,16 @@
         <h2 class="visually-hidden">Наши основные направления</h2>
         <p class="directions__info">Милые штуки ручной работы для дома</p>
         <ul class="directions__list">
-          <li class="directions__item"><span>Предметы интерьера</span></li>
-          <li class="directions__item"><span>Детские игрушки</span></li>
+          <li class="directions__item">
+            <a class="directions__link">
+              <span>Предметы интерьера</span>
+            </a>
+          </li>
+          <li class="directions__item">
+            <a class="directions__link">
+              <span>Детские игрушки</span>
+            </a>
+          </li>
         </ul>
       </section>
       <section class="weekly-goods">
