Последние правки(надеюсь)

--- a/source/index.html
+++ b/source/index.html
@@ -123,7 +123,7 @@
               e-mail:
             </td>
             <td class="contacts__value">
-              info@mimimishkashop.ru
+              <a class="contacts__email">info@mimimishkashop.ru</a>
             </td>
           </tr>
           <tr>
