--- a/source/index.html
+++ b/source/index.html
@@ -123,7 +123,7 @@
               e-mail:
             </td>
             <td class="contacts__value">
-              <a class="contacts__email">info@mimimishkashop.ru</a>
+              <a class="contacts__email" href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a>
             </td>
           </tr>
           <tr>
